--- a/ssis/templates/base.html
+++ b/ssis/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <!--ICON-->
-    <link rel="shortcut icon" href="../static/images/SSISlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../static/images/hnu_logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     
     
@@ -31,7 +31,7 @@
                     <div class="container">
                         <a onclick="window.location.reload()" class="navbar-brand mb-0 h1">
                             <img class="d-inline-block align-top"
-                                 src="{{url_for('static', filename='images/SSISlogo.png')}}"
+                                 src="{{url_for('static', filename='images/hnu_logo.png')}}"
                                  alt="SSIS logo">
                         </a>
 
@@ -74,7 +74,7 @@
         <br>
         <footer>
             <div class="container-fluid p-2 footer">
-                <p id="footer1">SSIS: Simple Student Information System</p>
+                <p id="footer1">HNU: Simple Student Information System By ShaoShuai / ZouLinzhuang</p>
             </div>
         </footer>
     </div> <!--End of wrapper-->
